bynkc/tests/fixtures/negative/346_oidc_on_cron/src/demo.bynk
context demo

type UserId = String where NonEmpty

actor User { auth = Oidc(issuer = "https://issuer.example", audience = "my-api", jwks = "https://issuer.example/jwks"), identity = UserId }

service jobs from cron {
  on schedule("* * * * *") by u: User () -> Effect[Result[(), String]] {
    Ok(())
  }
}
